--- a/style/style.css
+++ b/style/style.css
@@ -29,25 +29,45 @@ html {
   background: #1e2939;
 }
 
+.aside__container {
+  width: 100%;
+}
+
+.main {
+  padding: 50px;
+}
+
+@media (max-width: 767px) {
+  .main {
+    padding: 10px;
+  }
+}
+
 @media (max-width: 767px) {
   .aside {
     max-width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+  }
+}
 
-    padding: 20px;
+@media (max-width: 767px) {
+  .aside__container {
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 10px;
+    margin: 0px;
   }
 }
 
 @media (max-width: 767px) {
   .wrapper {
     flex-direction: column;
-    flex-grow: 1;
     margin: 0px;
   }
 }
-
 .header-secondary {
   color: #ffffff;
 }
@@ -81,29 +101,18 @@ html {
 }
 
 .contact-block {
-  margin-top: 51px;
-  margin-left: 40px;
+  max-width: 300px;
+  margin: 0px 20px;
 }
 
 .tech-skills-block {
-  margin-top: 47px;
-  margin-left: 40px;
+  max-width: 300px;
+  margin: 0px 20px;
 }
 
 .soft-skills-block {
-  margin-top: 47px;
-  margin-left: 40px;
-}
-
-.main {
-  padding: 50px;
-}
-
-@media (max-width: 767px) {
-  .main {
-    /* display: block;
-    float: right; */
-  }
+  max-width: 300px;
+  margin: 0px 20px;
 }
 
 .main-description {
@@ -223,4 +232,21 @@ h1 {
 
 .school-list-item {
   font-weight: 400;
+}
+
+.cv-photo-container {
+  max-width: 350px;
+}
+
+.cv-photo {
+  max-width: 350px;
+}
+
+@media (max-width: 767px) {
+  .cv-photo {
+    padding: 10px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 30px;
+  }
 }
