--- a/style/style.css
+++ b/style/style.css
@@ -21,45 +21,7 @@ html {
   margin: 10px auto;
   background: #ffffff;
   box-shadow: 6px 6px 20px 0px #0000001a;
-}
-
-.aside {
-  max-width: 350px;
-  margin-top: 25px;
-  background: #1e2939;
-}
-
-.aside__container {
-  width: 100%;
-}
-
-.main {
-  padding: 50px;
-}
-
-@media (max-width: 767px) {
-  .main {
-    padding: 10px;
-  }
-}
-
-@media (max-width: 767px) {
-  .aside {
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-}
-
-@media (max-width: 767px) {
-  .aside__container {
-    max-width: 350px;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    padding: 10px;
-    margin: 0px;
-  }
+  overflow-wrap: break-word;
 }
 
 @media (max-width: 767px) {
@@ -67,52 +29,6 @@ html {
     flex-direction: column;
     margin: 0px;
   }
-}
-.header-secondary {
-  color: #ffffff;
-}
-
-.contact-links {
-  color: #ffffff;
-  font-size: 15px line-height 24px;
-  padding: 0px;
-  list-style: none;
-}
-
-.contact-links li {
-  margin-bottom: 10px;
-}
-
-.icon {
-  width: 15px;
-}
-
-.list-secondary {
-  color: #fb6d3a;
-  font-size: 15px;
-  line-height: 24px;
-  margin-left: 0px;
-  padding-left: 0px;
-  list-style-position: inside;
-}
-
-.list-secondary-item {
-  color: #ffffff;
-}
-
-.contact-block {
-  max-width: 300px;
-  margin: 0px 20px;
-}
-
-.tech-skills-block {
-  max-width: 300px;
-  margin: 0px 20px;
-}
-
-.soft-skills-block {
-  max-width: 300px;
-  margin: 0px 20px;
 }
 
 .main-description {
@@ -232,21 +148,4 @@ h1 {
 
 .school-list-item {
   font-weight: 400;
-}
-
-.cv-photo-container {
-  max-width: 350px;
-}
-
-.cv-photo {
-  max-width: 350px;
-}
-
-@media (max-width: 767px) {
-  .cv-photo {
-    padding: 10px;
-    max-width: 100%;
-    height: auto;
-    border-radius: 30px;
-  }
 }
