add styles to portfolio

--- a/style/education.css
+++ b/style/education.css
@@ -10,7 +10,7 @@
 .education__schoolName {
   font-size: 18px;
   font-weight: 700;
-  color: #ff632b;
+  color: #f24100;
 }
 
 .education__schoolClass {
